--- a/noting-server/src/main/webapp/noting.css
+++ b/noting-server/src/main/webapp/noting.css
@@ -1,32 +1,105 @@
+html, body{
+    margin:1rem;
+    font-family: sans-serif;
+    font-size: 1rem;  
+}
+
 .bottoneLogin{
-    background-color: #4CAF50; /* Un colore verde */
+    background-color: #6f4caf; 
     color: white;
-    padding: 10px 20px;
+    padding: 10px 40px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
-
 .headerPanel {
-    background-color: #333; /* Un colore nero/grigio scuro */
-    color: white;
+    color: black;
     padding: 10px;
     margin-bottom: 20px;
-    display: flex; /* Per allineare gli elementi */
-    justify-content: space-between; /* Per mettere il logout a destra */
+    display: flex;
+    justify-content: flex-end; 
     align-items: center;
-}
-
-.pulsante_logout {
-    color: goldenrod; /* Rende il link del logout bianco */
-    text-decoration: none; /* Rimuove la sottolineatura */
 }
 
 .userInfo {
     font-weight: bold;
-    color: tomato;
+    color: black;
+    padding:2%;
+    margin-right:1rem;
 }
 
+/*pannello che contiene form login*/
+.login-panel {
+    position: absolute;
+    top: 40%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    min-width: 300px; 
+}
 
-    
+/*pannello che contiene bottoni*/
+.button-panel {
+    width: 100%;
+    justify-content: space-between; 
+}
+
+.label-header {
+    text-align: center;
+    font-size: 18px; 
+    font-weight: bold;
+    margin-bottom: 10px; 
+}
+
+.label2{
+    font-size: 18px; 
+    font-weight: bold;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.input {
+    width: 100%; 
+    height: 2rem;
+    border-radius: 8px;
+    box-sizing: border-box;
+}
+
+.form-panel {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    max-width: 500px; 
+    width: 90%;
+}
+
+.note-input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.note-textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    font-size: 16px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical; 
+}
